# zzz-techmino

./: CMakeLists.txt  test.cpp  test.lua  zzz.lua  zzz_techmino.cpp
.github/workflows/: cmake.yml
lib/: lua51.def  lua51.exp  lua51.lib
